[tool.poetry]
name = "python-genai"
version = "0.1.0"
description = ""
authors = ["Muhammad Zafeer <zafeerwains@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.21"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.8"
langchain-openai = "^0.2.10"
langchain-huggingface = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
